# pyFEAST

./: README.md
data/: download.sh
source/: FEAST.py  evaluate_FEAST_simulation.py  knightLab_analysis.py
source/packaging_tutorial/: README.md  pyproject.toml
source/packaging_tutorial/src/example_package_ha/: __init__.py
source/packaging_tutorial/src/example_package_ha.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
